fixed error with nav menu and content's spacing

--- a/src/app/pages/challenges/challenges.component.scss
+++ b/src/app/pages/challenges/challenges.component.scss
@@ -1,5 +1,5 @@
 .challenges-page {
-  padding: 3rem 5rem;
+  padding: 0 5rem;
 
   .challenges-header {
     max-width: 500px;
