--- a/src/app/pages/programs/programs.component.scss
+++ b/src/app/pages/programs/programs.component.scss
@@ -1,7 +1,3 @@
-.programs-page {
-  padding: 5%;
-}
-
 .programs-header {
   max-width: 1200px;
   margin: 0 auto 2rem;
