--- a/src/app/shell/components/navmenu/navmenu.component.scss
+++ b/src/app/shell/components/navmenu/navmenu.component.scss
@@ -4,7 +4,7 @@
   height: 7vh;
   display: flex;
   align-items: center;
-  position: fixed;
+  position: relative;
   top: 0;
   left: 0;
   z-index: 1000;
@@ -20,8 +20,6 @@
     width: 100%;
     display: flex;
     justify-content: space-around;
-    padding: 0px;
-    margin: 0px;
     transition: all 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275); // Enhanced timing function from (1)
   }
 
